--- a/public/index.html
+++ b/public/index.html
@@ -66,14 +66,15 @@
                 </div>
 
                 <div class="project-card">
-                    <img src="img/project-4.png" class="project-image" alt="">
+                    <img src="img/bot.png" class="project-image" alt="">
                     <div class="project-content">
-                        <h1 class="project-title">Project 04</h1>
-                        <p class="project-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore omnis ad reprehenderit excepturi eveniet ducimus maiores soluta voluptatum quo illum.
+                        <h1 class="project-title">TrucBot : un bot Discord</h1>
+                        <p class="project-info">Un bot discord développé en python avec lequel l'utilisateur peut interagir avec par exemple un mini jeu proche du juste prix et d'autres commandes plus hummoristiques
                         </p>
                         <div class="project-btn-grp">
-                            <button class="project-btn github">github repo</button>
-                            <button class="project-btn live">Démo</button>
+                            <button class="project-btn github" onclick="window.alert('Le code source de ce projet n\'est pas public, contactez moi pour plus d\informations');
+                            ">Code Source</button>
+                            <button class="project-btn live" onclick='window.location.href="https://discord.gg/5jVQDSu";'>Démo</button>
                         </div>
                     </div>
                 </div>
@@ -87,17 +88,24 @@
                     <img src="img/project-1.png" class="about-img" alt="">
                     <button class="download-cv-btn">Télécharger mon CV </button>
                 </div>
-                <p class="about-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores quas sint maxime animi autem, saepe quis labore temporibus maiores perspiciatis aliquid consequuntur expedita illo quos ex ullam fugit vitae quisquam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo praesentium earum illum hic eos quod! Cum distinctio recusandae officia labore saepe. Hic harum placeat, aut laboriosam et aspernatur voluptas itaque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui dolorum et quas dolor consequatur quae, magni expedita atque eius. Earum magni tenetur ea aspernatur eius fugit quas enim harum reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum mollitia dolor, minima accusantium hic accusamus similique omnis dicta ab? Tempore quod neque amet corporis quae, laudantium facilis rem provident rerum Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quidem molestias sit laboriosam soluta aspernatur officia reiciendis blanditiis? Sint dolores, dolorem atque inventore a nulla repellendus fuga consequuntur quia molestiae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ad molestiae, repellat, reprehenderit quos tenetur in asperiores necessitatibus, quam voluptate quis expedita ipsum omnis veritatis perspiciatis sequi ex unde et!</p>
+                <p class="about-info">Je suis élève en Terminale au Lycée Maréchal Soult a Mazamet avec les spécialité Mathématiques et Science de l'Ingénieur. Je suis passionné par les maths et l'informatique depuis tout petit, j'ai participé au Jeunes Talents Mathématiques 2018 a l'Université Paul Sabatier de Toulouse. Je réalise des petits projets en Python et en HTML/CSS. </p>
             </div>
         </section>
 
         <section class="contact-section">
-            <form class="contact-form">
+            <div class="contact-info">
+                <ul class="contact-list">
+                    <li class="contact-way"><b>Email : </b>fieuemilien@gmail.com</li>
+                    <li class="contact-way"><b>Tel : </b> 07 81 15 12 78</li>
+                    <li class="contact-way"><b>Discord : </b>Tructruc#9808</li>
+                </ul>
+            </div>
+            <!--<form class="contact-form">
                 <input type="text" name="name" id="name" autocomplete="off" placeholder="Nom">
                 <input type="text" name="email" id="email" autocomplete="off" placeholder="email">
                 <textarea name="msg" id="msg" placeholder="message" autocomplete="off"></textarea>
                 <button type="submit" class="form-submit-btn">Envoyer</button>
-            </form>
+            </form>-->
 
             <div class="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d185325.94293039764!2d2.2462141188044593!3d43.46648720122797!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ae18d0b68e0165%3A0x4b4b131c7e76e80d!2sMazamet!5e0!3m2!1sfr!2sfr!4v1642175491004!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
