--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
             
             <div class="about">
                 <div class="about-img-container">
-                    <img src="img/project-1.png" class="about-img" alt="">
+                    <img src="img/bitmoji.jpg" class="about-img" alt="">
                     <button class="download-cv-btn">Télécharger mon CV </button>
                 </div>
                 <p class="about-info">Je suis élève en Terminale au Lycée Maréchal Soult a Mazamet avec les spécialité Mathématiques et Science de l'Ingénieur. Je suis passionné par les maths et l'informatique depuis tout petit, j'ai participé au Jeunes Talents Mathématiques 2018 a l'Université Paul Sabatier de Toulouse. Je réalise des petits projets en Python et en HTML/CSS. </p>
